# flash-mlm

./: .gitignore  LICENSE  README.md  RELEASE.md  fused-attention-batch4-head32-d64-fwd-causal=False-warp_specialize=False.csv  fused-attention-batch4-head32-d64-fwd-causal=True-warp_specialize=False.csv  pyproject.toml  release.sh  results.html
.github/workflows/: python-package.yml
flash-mlm/benchmark/: __init__.py  benchmark_mlm_batch.py  benchmark_mlm_nctx.py  common.py
flash-mlm/python/: host.py  host_utils.py  kernel.py  kernel_utils.py  mlm_kernel.py  test.py  utils.py
flash-mlm/test/: test.py  test_host_utils.py
src/benchmark/: benchmark_mlm_nctx.py  benchmark_mlm_vs_torch.py  common.py
src/benchmark/standard_kernel/: benchmark_mlm_vs_torch.py  benchmark_mlm_vs_torch_sequence_length.py  plot_utils.py  test_utils.py  utils.py
src/flash_mlm/: __init__.py  cache.py  host.py  host_utils.py  kernel.py  kernel_utils.py  mlm_kernel.py  mlm_kernel_impl.py  test.py  test_host_utils.py
src/flash_mlm/host/: __init__.py  cache.py  host.py  host_utils.py  test_host.py  test_host_utils.py
src/profile/: profile_mlm_ncu.py
src/test/: test_host_utils.py
src/utils/: plot_utils.py
