[project]
name = "flash-mlm"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Mao"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "triton (>=3.6.0,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
