[project]
name = "flash-mlm"
version = "1.1.2"
description = "Triton-based Flash MLM attention kernels for PyTorch"
readme = "README.md"
authors = [
    {name = "Victor Mao"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = {Repository = "https://github.com/vymao/flash-mlm", Issues = "https://github.com/vymao/flash-mlm/issues"}
dependencies = [
    "torch (>=2.8.0,<2.9.0)",
    "numpy (>=1.22,<3.0.0)"
]

[project.optional-dependencies]
gpu = [
    "triton (==3.4.0)",
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
]
bench = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "flash_mlm", from = "src" },
]

[tool.pytest.ini_options]
pythonpath = ["src"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
